# auto-proposal-drafter

./: .dockerignore  .gcloudignore  .gitignore  CLAUDE.md  DEPLOYMENT.md  Dockerfile  README.md  USAGE.md  cloudbuild-prod.yaml  cloudbuild-staging.yaml  cloudbuild.yaml  pyproject.toml
data/opportunities/: OPP-2025-001.json
figma-plugin/: README.md  manifest.json  package-lock.json  package.json  tsconfig.json
figma-plugin/scripts/: build.mjs
figma-plugin/src/: main.ts
services/api/: main.py
services/worker/: main.py
src/auto_proposal_drafter/: dictionaries.py  firestore_job_store.py  generator.py  job_store.py  logging_config.py  opportunity_repository.py  post_processor.py  pubsub_client.py  vertex_ai_adapter.py
src/auto_proposal_drafter/ingestors/: __init__.py  hubspot.py  notion.py
src/auto_proposal_drafter/models/: estimate.py  job.py  opportunity.py  structure.py  wire.py
terraform/: README.md  main.tf  outputs.tf  variables.tf
tests/: test_generator.py
