[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "auto-proposal-drafter"
version = "0.1.0"
description = "Automated proposal drafting pipeline for site structure, wireframes, and estimates."
authors = [
  {name = "Auto Proposal Drafter Team"}
]
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.110,<1.0",
  "pydantic>=2.5,<3.0",
  "uvicorn[standard]>=0.22,<1.0",
  "python-dateutil>=2.8,<3.0",
  "google-cloud-firestore>=2.14,<3.0",
  "google-cloud-pubsub>=2.18,<3.0",
  "google-cloud-secret-manager>=2.17,<3.0",
  "google-cloud-aiplatform>=1.38,<2.0",
  "google-cloud-logging>=3.8,<4.0",
  "notion-client>=2.2,<3.0",
  "hubspot-api-client>=8.0,<9.0",
  "gspread>=5.12,<6.0",
  "google-auth>=2.25,<3.0",
  "asana>=5.0,<6.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4,<8.0",
  "httpx>=0.24,<0.27"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
